# engineer-challenge

./: .env.docker  .env.example  .gitignore  Makefile  README.md  README_HUMAN.md  alembic.ini  claude.md  conftest.py  pyproject.toml  solution_description.md
.ralphex/: config
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_auth_events_table.py
auth_service/: container.py  main.py
auth_service/application/: dto.py
auth_service/application/commands/: authenticate_user.py  refresh_token.py  register_user.py  request_password_reset.py  reset_password.py  revoke_session.py
auth_service/application/ports/: audit_log.py  email_service.py  password_hasher.py  token_service.py  token_store.py
auth_service/domain/: exceptions.py
auth_service/domain/entities/: password_reset_token.py  user.py
auth_service/domain/repositories/: reset_token_repository.py  user_repository.py
auth_service/infrastructure/: logging.py
docker/: Dockerfile  docker-compose.postgres.redis.ralphex.yml  docker-compose.yml
docker/postgres/: init.sql
docs/adr/: 0001-graphql-over-rest.md  0002-layered-ddd.md  0003-python-stack.md
docs/plans/: 20260325-auth-module.md  20260327-fix-docker-env-consistency.md  20260327-fix-docker-integration-tests.md  20260330-audit-trail-idempotency-requirements.md  20260330-fix-failing-tests-and-warnings.md  20260331-fix-structlog-printlogger-name.md  20260406-raise-on-unknown-email-reset.md
tests/integration/: test_audit_event_model.py  test_graphql.py  test_repositories.py  test_token_store.py
tests/smoke/: test_infrastructure.py
(+46 files in other folders)
